# QueueIQ

./: README.md  app.py  orchestrator.ipynb  requirements.txt
.github/: CODEOWNERS
.github/workflows/: queueiq-ci.yml
ArrivalSignal/backend/app/agent/: prompts.py
ArrivalSignal/backend/app/api/: routes_chat.py
ArrivalSignal/backend/app/config/: clinics.yaml
ArrivalSignal/backend/app/storage/: schema.sql
ArrivalSignal/frontend/: package-lock.json
ArrivalSignal/frontend/src/: api.js
ArrivalSignal/frontend/src/components/: ChatWidget.jsx
ChatBot/: .env.example
ChatBot/backend/: pyproject.toml
ChatBot/backend/app/: main.py
ChatBot/backend/app/agent/: llm_client.py  orchestrator.py  safety.py
ChatBot/backend/app/api/: routes_clinics.py
ChatBot/backend/app/config/: loader.py
ChatBot/backend/app/models/: schemas.py
ChatBot/backend/app/storage/: repo.py
ChatBot/backend/tests/: test_chat_smoke.py  test_clinics.py  test_health.py
ChatBot/frontend/: index.html  package.json
ChatBot/frontend/src/: App.jsx  styles.css
ChatBot/frontend/src/components/: ClinicSelector.jsx  ResultsView.jsx
Chatbot/: .gitignore  README.md
Chatbot/backend/: requirements.txt
Chatbot/backend/app/agent/: queue_risk.py
Chatbot/backend/app/core/: settings.py
Chatbot/backend/app/storage/: db.py  schema.py
Chatbot/frontend/src/: App.jsx  styles.css
data-collection/: call_center_data.csv  service_level_data.csv
documentation/: Business_Impact.md
training/: data_preprocessing.py  linear_regression_model.py  trend_analysis.py
visualization/: charts.py
(+9 files in other folders)
